--- a/01-Introduccion/index.html
+++ b/01-Introduccion/index.html
@@ -14,5 +14,8 @@
         <p>Introducción</p>
         <p class="hashtag">#JSModernoConJuan</p>
     </div>
+    <!-- <script src="../02-Variables/js/01-app.js"></script> -->
+    <script src="../02-Variables/js/02-app.js"></script>
+    <script src="../02-Variables/js/03-app.js"></script>
 </body>
 </html>
