--- a/16-PROYECTO-EnviarEmail/index.html
+++ b/16-PROYECTO-EnviarEmail/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Envio de Emails</title>
     <link rel="stylesheet" href="dist/app.css">
+    <link rel="stylesheet" href="dist/spinner.css">
 </head>
 <body class="min-h-screen bg-slate-300">
     <div class="max-w-3xl mx-auto p-10">
         <h1 class="text-4xl text-gray-700 pt-32">Enviar mails</h1>
+
         <div class="bg-white rounded-lg shadow-xl p-10 mt-5">
+            
             <form id="formulario" class="space-y-3">
                 <div class="flex flex-col space-y-2">
                     <label for="email" class="font-regular font-medium">Email:</label>
@@ -50,6 +53,19 @@
                     </button>
                 </div>           
             </form>
+
+            <div id="spinner" class="hidden flex justify-center mt-10">
+
+                <div class="sk-chase">
+                    <div class="sk-chase-dot"></div>
+                    <div class="sk-chase-dot"></div>
+                    <div class="sk-chase-dot"></div>
+                    <div class="sk-chase-dot"></div>
+                    <div class="sk-chase-dot"></div>
+                    <div class="sk-chase-dot"></div>
+                </div>
+            </div>
+
         </div>
     </div>
 
